--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .headerBar {
-    height: 100px;
+    height: 150px;
     width: 100%;
     margin: 0px;
     background-color: rgb(236, 232, 226);
@@ -75,25 +75,23 @@ a:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 0px;
     margin-bottom: 30px;
     position: relative;
-    top: 100px;
+    top: 120px;
 }
 
 .backgroundPic {
     height: 450px;
-    width: 1200px;
+    width: 100%;
     background-image: url('../images/Backdrop.jpg');
     background-repeat: no-repeat;
-    background-size: 1200px 450px;
+    background-size: cover;
     background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 5px 5px 5px 5px rgb(127, 149, 182);
-    border-radius: 75px;
-    object-fit: contain;
+    box-shadow: 0px 5px 5px 5px rgb(127, 149, 182);
 }
 
 .profilePic {
@@ -340,7 +338,7 @@ a:active {
 
 
 .footer {
-    height: 100px;
+    height: 150px;
     width: 100%;
     margin: 0px;
     background-color: rgb(236, 232, 226);
