--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -71,7 +71,8 @@ a:active {
 
 .photo-container {
     height: 500px;
-    width: 100%;
+    width: 1200px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,7 +92,8 @@ a:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 5px 5px 5px rgb(127, 149, 182);
+    box-shadow: 5px 5px 5px 5px rgb(127, 149, 182);
+    border-radius: 10px;
 }
 
 .profilePic {
