--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -340,9 +340,9 @@ a:active {
 
 
 .footer {
-    height: 150px;
+    height: 100px;
     width: 100%;
-    margin: 0px;
+    margin: 0 auto;
     background-color: rgb(236, 232, 226);
     color: rgb(32, 32, 32);
     display: flex;
@@ -356,5 +356,5 @@ a:active {
     border-color: rgb(32, 32, 32);
     box-shadow: inset -10px 0px 40px 0px rgb(127, 149, 182);
     position: absolute;
-    top: 5500px;
+    bottom: -5000px;
 }
