--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -342,7 +342,7 @@ a:active {
 .footer {
     height: 100px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0px;
     background-color: rgb(236, 232, 226);
     color: rgb(32, 32, 32);
     display: flex;
@@ -352,9 +352,11 @@ a:active {
     justify-content: center;
     padding: 0px;
     border-top-style: solid;
+    border-bottom-style: solid;
     border-width: 2px;
     border-color: rgb(32, 32, 32);
     box-shadow: inset -10px 0px 40px 0px rgb(127, 149, 182);
     position: absolute;
     bottom: -5000px;
+    z-index: 100;
 }
