--- a/src/components/Styles.css
+++ b/src/components/Styles.css
@@ -183,7 +183,7 @@ a:active {
 
 .school {
     height: 500px;
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -337,26 +337,30 @@ a:active {
 
 
 
-
+.footerContainer {
+    height: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 
 .footer {
     height: 100px;
     width: 100%;
-    margin: 0px;
     background-color: rgb(236, 232, 226);
     color: rgb(32, 32, 32);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-content: center;
     align-items: center;
     justify-content: center;
     padding: 0px;
     border-top-style: solid;
-    border-bottom-style: solid;
     border-width: 2px;
     border-color: rgb(32, 32, 32);
     box-shadow: inset -10px 0px 40px 0px rgb(127, 149, 182);
     position: absolute;
     bottom: -5000px;
-    z-index: 100;
 }
